[package]
name = "arsenal"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
qstring = "0.7.2"
futures-core = "0.3.15"
reqwest = {version = "0.11.4", features = ["stream"]}
bytes = "1.0.1"
serde_json = "1.0.59"